# simd_ons_experiments

./: Build.md  CMakeLists.txt  Readme.md  graphics_altivec.cpp  graphics_altivec.h  graphics_blend.h  graphics_cpu.h  graphics_mmx.cpp  graphics_mmx.h  graphics_neon.cpp  graphics_neon.h  graphics_resize.h  graphics_routines.cpp  graphics_sse2.cpp  graphics_sse2.h  graphics_sum.h  main.cpp
.github/workflows/: build.yml
cmake/: DependencyFinder.cmake  ResourceGenerator.cmake  TargetArch.cmake
